--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to Bible Reader</title>
+  <title>Bible Swipe</title>
+  <link rel="icon" type="image/svg+xml" href="icon.svg">
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -119,7 +121,7 @@
   </style>
 </head>
 <body>
-  <h1>Welcome to Bible Reader</h1>
+  <h1>BibleSwipe.com</h1>
   <p></p>
   <form id="verse-form">
     <div class="input-group">
@@ -130,7 +132,7 @@
       <input id="chapter-input" type="number" placeholder="Chapter" min="1" />
       <input id="verse-input" type="number" placeholder="Verse" min="1" />
     </div>
-    <button type="submit">Go to Verse</button>
+    <button type="submit">Start!</button>
   </form>
 
   <script>
