--- a/read.html
+++ b/read.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bible Reader - KJV</title>
+  <title>Bible Swipe</title>
+  <link rel="icon" type="image/svg+xml" href="icon.svg">
   <style>
     body {
       font-family: Arial, sans-serif;
