--- a/read.html
+++ b/read.html
@@ -81,19 +81,17 @@
       "1 Timothy", "2 Timothy", "Titus", "Philemon", "Hebrews", "James", "1 Peter", "2 Peter",
       "1 John", "2 John", "3 John", "Jude", "Revelation"
     ];
-  
-    // Extract query parameters from the URL
+
     const urlParams = new URLSearchParams(window.location.search);
     const bookParam = urlParams.get("book");
     const chapterParam = urlParams.get("chapter");
     const verseParam = urlParams.get("verse");
-  
-    // Set initial verse values
-    let currentBook = books.includes(bookParam) ? bookParam : "Genesis"; // Default to Genesis
-    let currentChapter = parseInt(chapterParam) || 1; // Default to chapter 1
-    let currentVerse = parseInt(verseParam) || 1; // Default to verse 1
-  
-    // Fetch the verse from the folder structure
+
+    // Set initial values with fallback to localStorage
+    let currentBook = books.includes(bookParam) ? bookParam : localStorage.getItem("lastBook") || "Genesis";
+    let currentChapter = parseInt(chapterParam) || parseInt(localStorage.getItem("lastChapter")) || 1;
+    let currentVerse = parseInt(verseParam) || parseInt(localStorage.getItem("lastVerse")) || 1;
+
     async function fetchVerse(book, chapter, verse) {
       try {
         const response = await fetch(`bible/${book}/${chapter}/${verse}.json`);
@@ -105,45 +103,47 @@
         return null;
       }
     }
-  
-    // Dynamically adjust font size to prevent scroll bars
+
     function adjustFontSize() {
       const verseTextElement = document.getElementById("verse-text");
       const verseReferenceElement = document.getElementById("verse-reference");
-  
-      const containerHeight = window.innerHeight * 0.8; // Max height for content
-      const containerWidth = window.innerWidth * 0.9; // Max width for content
-  
-      let fontSize = 2; // Start with base font size in rem
+
+      const containerHeight = window.innerHeight * 0.8;
+      const containerWidth = window.innerWidth * 0.9;
+
+      let fontSize = 2;
       verseTextElement.style.fontSize = `${fontSize}rem`;
       verseReferenceElement.style.fontSize = `${fontSize * 0.75}rem`;
-  
+
       while (
         verseTextElement.scrollHeight > containerHeight ||
         verseTextElement.scrollWidth > containerWidth
       ) {
-        fontSize -= 0.1; // Decrease font size incrementally
+        fontSize -= 0.1;
         verseTextElement.style.fontSize = `${fontSize}rem`;
         verseReferenceElement.style.fontSize = `${fontSize * 0.75}rem`;
-  
-        if (fontSize <= 1) break; // Ensure font size doesn't get too small
+        if (fontSize <= 1) break;
       }
     }
-  
-    // Load the current verse
+
     async function loadVerse() {
       const data = await fetchVerse(currentBook, currentChapter, currentVerse);
-  
+
       if (data) {
         document.getElementById("verse-text").innerText = data.text;
         document.getElementById("verse-reference").innerText = `${data.book} ${data.chapter}:${data.verse}`;
+
+        // Save progress to localStorage
+        localStorage.setItem("lastBook", currentBook);
+        localStorage.setItem("lastChapter", currentChapter);
+        localStorage.setItem("lastVerse", currentVerse);
+
         adjustFontSize();
       } else {
-        nextBook(); // Transition to the next book if no verse is found
+        nextBook();
       }
     }
-  
-    // Transition to the next book if at the end of the current book
+
     function nextBook() {
       const currentBookIndex = books.indexOf(currentBook);
       if (currentBookIndex < books.length - 1) {
@@ -156,18 +156,17 @@
         document.getElementById("verse-reference").innerText = "";
       }
     }
-  
-    // Navigate to the next verse
+
     async function nextVerse() {
       currentVerse++;
       const nextVerseData = await fetchVerse(currentBook, currentChapter, currentVerse);
       if (!nextVerseData) {
         currentChapter++;
         currentVerse = 1;
-  
+
         const nextChapterData = await fetchVerse(currentBook, currentChapter, currentVerse);
         if (!nextChapterData) {
-          nextBook(); // If no more chapters, transition to the next book
+          nextBook();
         } else {
           loadVerse();
         }
@@ -175,52 +174,47 @@
         loadVerse();
       }
     }
-  
-    // Navigate to the previous verse
+
     async function prevVerse() {
       if (currentVerse > 1) {
         currentVerse--;
       } else if (currentChapter > 1) {
         currentChapter--;
-        currentVerse = 50; // Assume chapters have max 50 verses (adjust as needed)
+        currentVerse = 50;
       } else {
         const currentBookIndex = books.indexOf(currentBook);
         if (currentBookIndex > 0) {
           currentBook = books[currentBookIndex - 1];
-          currentChapter = 50; // Assume previous book has 50 chapters (adjust as needed)
-          currentVerse = 50; // Assume the last chapter has 50 verses
+          currentChapter = 50;
+          currentVerse = 50;
         }
       }
       loadVerse();
     }
-  
-    // Initialize
+
     loadVerse();
-  
-    // Handle desktop scrolling
+
     window.addEventListener("wheel", (e) => {
       if (e.deltaY > 0) {
-        nextVerse(); // Scroll down for next verse
+        nextVerse();
       } else {
-        prevVerse(); // Scroll up for previous verse
+        prevVerse();
       }
     });
-  
-    // Handle touch gestures for mobile
+
     let startY = 0;
     document.addEventListener("touchstart", (e) => {
       startY = e.touches[0].clientY;
     });
-  
+
     document.addEventListener("touchend", (e) => {
       const endY = e.changedTouches[0].clientY;
       if (startY > endY + 50) {
-        nextVerse(); // Swipe up for next verse
+        nextVerse();
       } else if (startY < endY - 50) {
-        prevVerse(); // Swipe down for previous verse
+        prevVerse();
       }
     });
   </script>
-  
 </body>
 </html>
