Fixed Looping and Seperation of Concens!

--- a/index.html
+++ b/index.html
@@ -5,112 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bible Swipe</title>
   <link rel="icon" type="image/svg+xml" href="assets/icon.svg">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background-color: #f5f5f5;
-      color: #333;
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      width: 100vw;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 20px;
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 20px;
-    }
-
-    .input-group {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      justify-content: center;
-    }
-
-    .autocomplete {
-      position: relative;
-    }
-
-    input {
-      font-size: 1.2rem;
-      padding: 10px;
-      width: 150px;
-      max-width: 100%;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      box-sizing: border-box;
-    }
-
-    .suggestions {
-      position: absolute;
-      top: 45px;
-      left: 0;
-      right: 0;
-      max-height: 150px;
-      overflow-y: auto;
-      background-color: white;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      z-index: 1000;
-      display: none;
-    }
-
-    .suggestion-item {
-      padding: 10px;
-      cursor: pointer;
-    }
-
-    .suggestion-item:hover {
-      background-color: #f5f5f5;
-    }
-
-    button {
-      font-size: 1.2rem;
-      padding: 10px 20px;
-      color: white;
-      background-color: #007BFF;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #0056b3;
-    }
-
-    @media (max-width: 480px) {
-      h1 {
-        font-size: 2rem;
-      }
-
-      input {
-        font-size: 1rem;
-        padding: 8px;
-        width: 120px;
-      }
-
-      button {
-        font-size: 1rem;
-        padding: 8px 16px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>BibleSwipe.com</h1>
+  <br><br><br>
   <form id="verse-form">
     <div class="input-group">
       <div class="autocomplete">
@@ -123,80 +22,9 @@
     <button type="submit">Start!</button>
   </form>
 
-  <script>
-    const books = [
-      "Genesis", "Exodus", "Leviticus", "Numbers", "Deuteronomy", "Joshua", "Judges",
-      "Ruth", "1 Samuel", "2 Samuel", "1 Kings", "2 Kings", "1 Chronicles", "2 Chronicles",
-      "Ezra", "Nehemiah", "Esther", "Job", "Psalms", "Proverbs", "Ecclesiastes", "Song of Solomon",
-      "Isaiah", "Jeremiah", "Lamentations", "Ezekiel", "Daniel", "Hosea", "Joel", "Amos",
-      "Obadiah", "Jonah", "Micah", "Nahum", "Habakkuk", "Zephaniah", "Haggai", "Zechariah", "Malachi",
-      "Matthew", "Mark", "Luke", "John", "Acts", "Romans", "1 Corinthians", "2 Corinthians",
-      "Galatians", "Ephesians", "Philippians", "Colossians", "1 Thessalonians", "2 Thessalonians",
-      "1 Timothy", "2 Timothy", "Titus", "Philemon", "Hebrews", "James", "1 Peter", "2 Peter",
-      "1 John", "2 John", "3 John", "Jude", "Revelation"
-    ];
-
-    const bookInput = document.getElementById("book-input");
-    const chapterInput = document.getElementById("chapter-input");
-    const verseInput = document.getElementById("verse-input");
-    const suggestions = document.getElementById("suggestions");
-    const form = document.getElementById("verse-form");
-
-    // Pre-fill the inputs if there is saved progress
-    const lastBook = localStorage.getItem("lastBook") || "";
-    const lastChapter = localStorage.getItem("lastChapter") || "";
-    const lastVerse = localStorage.getItem("lastVerse") || "";
-
-    if (lastBook) bookInput.value = lastBook;
-    if (lastChapter) chapterInput.value = lastChapter;
-    if (lastVerse) verseInput.value = lastVerse;
-
-    bookInput.addEventListener("input", () => {
-      const input = bookInput.value.toLowerCase();
-      suggestions.innerHTML = "";
-      if (input) {
-        books
-          .filter((book) => book.toLowerCase().startsWith(input))
-          .forEach((book) => {
-            const suggestionItem = document.createElement("div");
-            suggestionItem.classList.add("suggestion-item");
-            suggestionItem.textContent = book;
-            suggestionItem.addEventListener("click", () => {
-              bookInput.value = book;
-              suggestions.innerHTML = "";
-              suggestions.style.display = "none";
-            });
-            suggestions.appendChild(suggestionItem);
-          });
-        suggestions.style.display = "block";
-      } else {
-        suggestions.style.display = "none";
-      }
-    });
-
-    bookInput.addEventListener("blur", () => {
-      setTimeout(() => {
-        suggestions.style.display = "none";
-      }, 200);
-    });
-
-    form.addEventListener("submit", (e) => {
-      e.preventDefault();
-      const book = bookInput.value.trim();
-      const chapter = chapterInput.value.trim();
-      const verse = verseInput.value.trim();
-
-      if (book && chapter && verse) {
-        // Save starting point
-        localStorage.setItem("lastBook", book);
-        localStorage.setItem("lastChapter", chapter);
-        localStorage.setItem("lastVerse", verse);
-
-        window.location.href = `read.html?book=${encodeURIComponent(book)}&chapter=${chapter}&verse=${verse}`;
-      } else {
-        alert("Please enter a valid book, chapter, and verse.");
-      }
-    });
-  </script>
+<script src="script.js"></script>
+<script>
+  setupIndexForm();
+</script>
 </body>
 </html>
