--- a/read.html
+++ b/read.html
@@ -5,216 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bible Swipe</title>
   <link rel="icon" type="image/svg+xml" href="assets/icon.svg">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background-color: #f5f5f5;
-      color: #333;
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      width: 100vw;
-      overflow: hidden; /* Prevent scroll bars */
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-
-    #verse-display {
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
-      width: 100%;
-      padding: 0 20px;
-      box-sizing: border-box; /* Include padding in width/height calculations */
-    }
-
-    #verse-text {
-      font-size: 2rem;
-      line-height: 1.8;
-      text-align: center;
-      word-wrap: break-word;
-      max-width: 90%;
-      overflow-wrap: break-word;
-      transition: font-size 0.2s ease;
-    }
-
-    #verse-reference {
-      margin-top: 10px;
-      font-size: 1.5rem;
-      color: #666;
-      transition: font-size 0.2s ease;
-    }
-
-    /* Ensure proper scaling for smaller devices */
-    @media (max-width: 360px) {
-      #verse-text {
-        font-size: 1.5rem;
-      }
-
-      #verse-reference {
-        font-size: 1.2rem;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <div id="verse-display">
-    <div id="verse-text">Loading...</div>
-    <div id="verse-reference"></div>
-  </div>
+  <body>
+    <div id="verse-display">
+      <div id="verse-text">Loading...</div>
+      <div id="verse-reference"></div>
+    </div>
 
+  <script src="script.js"></script>
   <script>
-    const books = [
-      "Genesis", "Exodus", "Leviticus", "Numbers", "Deuteronomy", "Joshua", "Judges",
-      "Ruth", "1 Samuel", "2 Samuel", "1 Kings", "2 Kings", "1 Chronicles", "2 Chronicles",
-      "Ezra", "Nehemiah", "Esther", "Job", "Psalms", "Proverbs", "Ecclesiastes", "Song of Solomon",
-      "Isaiah", "Jeremiah", "Lamentations", "Ezekiel", "Daniel", "Hosea", "Joel", "Amos",
-      "Obadiah", "Jonah", "Micah", "Nahum", "Habakkuk", "Zephaniah", "Haggai", "Zechariah", "Malachi",
-      "Matthew", "Mark", "Luke", "John", "Acts", "Romans", "1 Corinthians", "2 Corinthians",
-      "Galatians", "Ephesians", "Philippians", "Colossians", "1 Thessalonians", "2 Thessalonians",
-      "1 Timothy", "2 Timothy", "Titus", "Philemon", "Hebrews", "James", "1 Peter", "2 Peter",
-      "1 John", "2 John", "3 John", "Jude", "Revelation"
-    ];
-
-    const urlParams = new URLSearchParams(window.location.search);
-    const bookParam = urlParams.get("book");
-    const chapterParam = urlParams.get("chapter");
-    const verseParam = urlParams.get("verse");
-
-    // Set initial values with fallback to localStorage
-    let currentBook = books.includes(bookParam) ? bookParam : localStorage.getItem("lastBook") || "Genesis";
-    let currentChapter = parseInt(chapterParam) || parseInt(localStorage.getItem("lastChapter")) || 1;
-    let currentVerse = parseInt(verseParam) || parseInt(localStorage.getItem("lastVerse")) || 1;
-
-    async function fetchVerse(book, chapter, verse) {
-      try {
-        const response = await fetch(`bible/${book}/${chapter}/${verse}.json`);
-        if (!response.ok) throw new Error("Verse not found");
-        const data = await response.json();
-        return data;
-      } catch (error) {
-        console.error(error);
-        return null;
-      }
-    }
-
-    function adjustFontSize() {
-      const verseTextElement = document.getElementById("verse-text");
-      const verseReferenceElement = document.getElementById("verse-reference");
-
-      const containerHeight = window.innerHeight * 0.8;
-      const containerWidth = window.innerWidth * 0.9;
-
-      let fontSize = 2;
-      verseTextElement.style.fontSize = `${fontSize}rem`;
-      verseReferenceElement.style.fontSize = `${fontSize * 0.75}rem`;
-
-      while (
-        verseTextElement.scrollHeight > containerHeight ||
-        verseTextElement.scrollWidth > containerWidth
-      ) {
-        fontSize -= 0.1;
-        verseTextElement.style.fontSize = `${fontSize}rem`;
-        verseReferenceElement.style.fontSize = `${fontSize * 0.75}rem`;
-        if (fontSize <= 1) break;
-      }
-    }
-
-    async function loadVerse() {
-      const data = await fetchVerse(currentBook, currentChapter, currentVerse);
-
-      if (data) {
-        document.getElementById("verse-text").innerText = data.text;
-        document.getElementById("verse-reference").innerText = `${data.book} ${data.chapter}:${data.verse}`;
-
-        // Save progress to localStorage
-        localStorage.setItem("lastBook", currentBook);
-        localStorage.setItem("lastChapter", currentChapter);
-        localStorage.setItem("lastVerse", currentVerse);
-
-        adjustFontSize();
-      } else {
-        nextBook();
-      }
-    }
-
-    function nextBook() {
-      const currentBookIndex = books.indexOf(currentBook);
-      if (currentBookIndex < books.length - 1) {
-        currentBook = books[currentBookIndex + 1];
-        currentChapter = 1;
-        currentVerse = 1;
-        loadVerse();
-      } else {
-        document.getElementById("verse-text").innerText = "You have reached the end of the Bible.";
-        document.getElementById("verse-reference").innerText = "";
-      }
-    }
-
-    async function nextVerse() {
-      currentVerse++;
-      const nextVerseData = await fetchVerse(currentBook, currentChapter, currentVerse);
-      if (!nextVerseData) {
-        currentChapter++;
-        currentVerse = 1;
-
-        const nextChapterData = await fetchVerse(currentBook, currentChapter, currentVerse);
-        if (!nextChapterData) {
-          nextBook();
-        } else {
-          loadVerse();
-        }
-      } else {
-        loadVerse();
-      }
-    }
-
-    async function prevVerse() {
-      if (currentVerse > 1) {
-        currentVerse--;
-      } else if (currentChapter > 1) {
-        currentChapter--;
-        currentVerse = 50;
-      } else {
-        const currentBookIndex = books.indexOf(currentBook);
-        if (currentBookIndex > 0) {
-          currentBook = books[currentBookIndex - 1];
-          currentChapter = 50;
-          currentVerse = 50;
-        }
-      }
-      loadVerse();
-    }
-
-    loadVerse();
-
-    window.addEventListener("wheel", (e) => {
-      if (e.deltaY > 0) {
-        nextVerse();
-      } else {
-        prevVerse();
-      }
-    });
-
-    let startY = 0;
-    document.addEventListener("touchstart", (e) => {
-      startY = e.touches[0].clientY;
-    });
-
-    document.addEventListener("touchend", (e) => {
-      const endY = e.changedTouches[0].clientY;
-      if (startY > endY + 50) {
-        nextVerse();
-      } else if (startY < endY - 50) {
-        prevVerse();
-      }
-    });
-  </script>
+  setupReadPage();
+  </script>    
 </body>
 </html>
