--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bible Swipe</title>
-  <link rel="icon" type="image/svg+xml" href="assets/icon.svg">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Bible Swipe: Read the Bible one verse at a time with an easy-to-use swipe or scroll interface. Start from any verse and navigate seamlessly.">
+    <meta name="keywords" content="Bible, Bible reading, Bible verses, Bible Swipe, Read Bible online, KJV Bible, Bible Scroll">
+     <meta name="author" content="BibleSwipe">
+    <meta name="robots" content="index, follow">
+    <title>BibleSwipe</title>
+    <link rel="icon" type="image/svg+xml" href="icon.svg">      
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>BibleSwipe.com</h1>
@@ -19,12 +23,23 @@
       <input id="chapter-input" type="number" placeholder="Chapter" min="1" />
       <input id="verse-input" type="number" placeholder="Verse" min="1" />
     </div>
-    <button type="submit">Start!</button>
+    <button type="submit">Read</button>
   </form>
 
 <script src="script.js"></script>
 <script>
   setupIndexForm();
 </script>
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Bible Swipe",
+      "description": "Read the Bible one verse at a time. Navigate by swiping or scrolling.",
+      "url": "https://www.bibleswipe.com",
+      "applicationCategory": "Religion",
+      "operatingSystem": "All",
+    }
+    </script>    
 </body>
 </html>
