--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
      <meta name="author" content="BibleSwipe">
     <meta name="robots" content="index, follow">
     <title>BibleSwipe</title>
-    <link rel="icon" type="image/svg+xml" href="icon.svg">      
+    <link rel="icon" type="image/svg+xml" href="assets/icon.svg">      
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>BibleSwipe.com</h1>
   <br><br><br>
+  <div id="streak-display" style="position: absolute; top: 20px; right: 20px; display: flex; align-items: center; gap: 10px;">
+    <span id="streak-text" style="font-size: 2rem; font-weight: bold;">0</span>
+    <img src="assets/streak.svg" alt="Streak Icon" style="width: 32px; height: 32px;">
+  </div>  
   <form id="verse-form">
     <div class="input-group">
       <div class="autocomplete">
